--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Font Awesome Icons -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
 
-<!-- Shortcut icon --!>
+  <!-- Shortcut icon --!>
   <link rel="shortcut icon" href="./img/avatar.png" />
 
   <!-- Google Fonts -->
@@ -67,19 +67,26 @@
           <h1 class="text-uppercase text-white font-weight-bold">DEVELOPPEUR MERN Stack</h1>
           <hr class="divider my-4">
         </div>
-        <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5">Je me nomme RAZAFINDRABE Tsioritsoa Tahiriniaina Armel.<br />
-            J’ai toujours été dans des situations ne me permettant
-            pas de réaliser ce que je désire, mais ceux là ne m’ont
-            jamais arrêté. Aujourd'hui je suis là, j'ai fais partie de
-            l'aventure avec SIMPLON et je suis déterminé plus que jamais
-            à donner le meilleur de moi même.<br />
-            J'apprends beaucoup et je sais que le monde de la
-            programmation est ma vocation, quoi de plus beau que
-            de faire ce que l'on aime.<br />
-            <strong> Je suis prêt à relever tous les défis.</strong></p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">En savoir plus</a>
+        <div class="col-md-7">
+          <div class="col-lg-8 align-self-baseline">
+            <p class="text-white-75 font-weight-light mb-5">Je me nomme RAZAFINDRABE Tsioritsoa Tahiriniaina
+              Armel.<br />
+              J’ai toujours été dans des situations ne me permettant
+              pas de réaliser ce que je désire, mais ceux là ne m’ont
+              jamais arrêté. Aujourd'hui je suis là, j'ai fais partie de
+              l'aventure avec SIMPLON et je suis déterminé plus que jamais
+              à donner le meilleur de moi même.<br />
+              J'apprends beaucoup et je sais que le monde de la
+              programmation est ma vocation, quoi de plus beau que
+              de faire ce que l'on aime.<br />
+              <strong> Je suis prêt à relever tous les défis.</strong></p>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">En savoir plus</a>
+          </div>
         </div>
+        <div class="col-md-5">
+          <img id="sary" src="./img/tsiory.jpg" alt="Tsiory'tah Razafindrabe" />
+        </div>
+        <!-- <div class="col-md-1"></div> -->
       </div>
     </div>
   </header>
@@ -171,7 +178,8 @@
                 ExtraCOOK
               </div>
               <div class="project text-white-50">
-                C'est une application permettant de gerer des ateliers de cuisine. La réservation à l'atelier, l'inscription, les modifications et affichage ou non des ateliers.
+                C'est une application permettant de gerer des ateliers de cuisine. La réservation à l'atelier,
+                l'inscription, les modifications et affichage ou non des ateliers.
               </div>
             </div>
           </a>
