--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0">J'ai ce qu'il vous faut!</h2>
           <hr class="divider light my-4">
-          <p class="text-white-50 mb-4">En tant que Développeur MERN Stack, je suis disposé à réaliser tout proposition
+          <h4 class="text-white-50 mb-4">En tant que Développeur MERN Stack, je suis disposé à réaliser tout proposition
             d'application web.
-            Apte à travailler en équipe et prêt pour tous les défis probables, je suie un WARRIOR dans le domaine de
+            Apte à travailler en équipe et à relever tous les challenges, je suis un WARRIOR dans le domaine de
             développement informatique
-          </p>
+          </h4>
           <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Détails</a>
         </div>
       </div>
