mise en forme 2

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Tsiory'tah RAZAFINDRABE</title>
+  <title>Armel RAZAFINDRABE</title>
 
   <!-- Font Awesome Icons -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -16,10 +16,21 @@
   <!-- Shortcut icon --!>
   <link rel="shortcut icon" href="./img/avatar.png" />
 
+   <!-- GLOBAL MANDATORY STYLES -->
+  <link href="http://fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet" type="text/css">
+  <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css" />
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic'
     rel='stylesheet' type='text/css'>
+
+  <!-- PAGE LEVEL PLUGIN STYLES -->
+  <link href="css/animate.css" rel="stylesheet">
+
+  <!-- THEME STYLES -->
+  <link href="css/layout.min.css" rel="stylesheet" type="text/css" />
 
   <!-- Plugin CSS -->
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
@@ -69,17 +80,13 @@
         </div>
         <div class="col-md-7">
           <div class="col-lg-8 align-self-baseline">
-            <p class="text-white-75 font-weight-light mb-5">Je me nomme RAZAFINDRABE Tsioritsoa Tahiriniaina
-              Armel.<br />
-              J’ai toujours été dans des situations ne me permettant
-              pas de réaliser ce que je désire, mais ceux là ne m’ont
-              jamais arrêté. Aujourd'hui je suis là, j'ai fais partie de
-              l'aventure avec SIMPLON et je suis déterminé plus que jamais
-              à donner le meilleur de moi même.<br />
-              J'apprends beaucoup et je sais que le monde de la
-              programmation est ma vocation, quoi de plus beau que
-              de faire ce que l'on aime.<br />
-              <strong> Je suis prêt à relever tous les défis.</strong></p>
+            <p class="text-white-75 font-weight-light mb-5">Je suis Tsioritsoa Tahiriniaina Armel RAZAFINDRABE.<br />
+              J’ai toujours été dans des situations qui ne me permettent pas de réaliser mes aspirations
+              professionnelles, mais ceux-là ne m’ont jamais arrêté. Aujourd'hui je suis là, je faisais partie d’une
+              aventure riche en expériences avec SIMPLON et déterminé plus que jamais à donner le meilleur de moi-même.
+              Je suis perspicace et j’aime travailler en équipe.
+              Bref, le monde de la programmation est ma vocation. Quoi de plus beau que de faire ce que l'on aime.</p>
+            <strong> Je suis prêt à relever tous les défis.</strong><br /><br />
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">En savoir plus</a>
           </div>
         </div>
@@ -134,6 +141,12 @@
             <p class="text-muted mb-0">SQL - NoSQL</p>
             <p class="text-muted mb-0">C#</p>
           </div>
+          <!-- <div class="progress-box">
+            <h5>PHP <span class="color-heading pull-right">70%</span></h5>
+            <div class="progress">
+              <div class="progress-bar bg-color-dark" role="progressbar" data-width="70"></div>
+            </div>
+          </div> -->
         </div>
         <div class="col-lg-4 col-md-6 text-center">
           <div class="mt-5">
@@ -242,7 +255,6 @@
   </footer>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Plugin JavaScript -->
@@ -251,6 +263,28 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/creative.min.js"></script>
+
+  <!-- JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
+  <!-- CORE PLUGINS -->
+  <script src="vendor/jquery.min.js" type="text/javascript"></script>
+  <script src="vendor/jquery-migrate.min.js" type="text/javascript"></script>
+  <script src="vendor/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+
+  <!-- PAGE LEVEL PLUGINS -->
+  <script src="vendor/jquery.easing.js" type="text/javascript"></script>
+  <script src="vendor/jquery.back-to-top.js" type="text/javascript"></script>
+  <script src="vendor/jquery.smooth-scroll.js" type="text/javascript"></script>
+  <script src="vendor/jquery.wow.min.js" type="text/javascript"></script>
+  <script src="vendor/jquery.parallax.min.js" type="text/javascript"></script>
+  <script src="vendor/jquery.appear.js" type="text/javascript"></script>
+  <script src="vendor/masonry/jquery.masonry.pkgd.min.js" type="text/javascript"></script>
+  <script src="vendor/masonry/imagesloaded.pkgd.min.js" type="text/javascript"></script>
+
+  <!-- PAGE LEVEL SCRIPTS -->
+  <script src="js/layout.min.js" type="text/javascript"></script>
+  <script src="js/components/progress-bar.min.js" type="text/javascript"></script>
+  <script src="js/components/masonry.min.js" type="text/javascript"></script>
+  <script src="js/components/wow.min.js" type="text/javascript"></script>
 
 </body>
 
