--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 
 <head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-  
-    <title>Armel RAZAFINDRABE</title>
-  
-    <!-- Font Awesome Icons -->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic'
-      rel='stylesheet' type='text/css'>
-  
-    <!-- Plugin CSS -->
-    <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
-  
-    <!-- Theme CSS - Includes Bootstrap -->
-    <link href="css/creative.min.css" rel="stylesheet">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Armel RAZAFINDRABE</title>
+
+  <!-- Font Awesome Icons -->
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic'
+    rel='stylesheet' type='text/css'>
+
+  <!-- Plugin CSS -->
+  <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
+
+  <!-- Theme CSS - Includes Bootstrap -->
+  <link href="css/creative.min.css" rel="stylesheet">
 
 </head>
 
@@ -66,13 +66,15 @@
         </div>
         <div class="col-md-7">
           <div class="col-lg-8 align-self-baseline">
-            <p class="text-white-75 font-weight-light mb-5">Je suis Tsioritsoa Tahiriniaina Armel RAZAFINDRABE.<br/>
-                J’ai toujours été dans des situations qui ne me permettent pas de réaliser mes aspirations professionnelles, 
-                mais ceux-là ne m’ont jamais arrêté. 
-                Aujourd'hui je suis là, je faisais partie d’une aventure riche en expériences avec SIMPLON et déterminé plus que jamais à donner le meilleur de moi-même. 
-                Je suis perspicace et j’aime travailler en équipe. 
-                Bref, le monde de la programmation est ma vocation. 
-                Quoi de plus beau que de faire ce que l'on aime.</p>
+            <p class="text-white-75 font-weight-light mb-5">Je suis Tsioritsoa Tahiriniaina Armel RAZAFINDRABE.<br />
+              J’ai toujours été dans des situations qui ne me permettent pas de réaliser mes aspirations
+              professionnelles,
+              mais ceux-là ne m’ont jamais arrêté.
+              Aujourd'hui je suis là, je faisais partie d’une aventure riche en expériences avec SIMPLON et déterminé
+              plus que jamais à donner le meilleur de moi-même.
+              Je suis perspicace et j’aime travailler en équipe.
+              Bref, le monde de la programmation est ma vocation.
+              Quoi de plus beau que de faire ce que l'on aime.</p>
             <strong> Je suis prêt à relever tous les défis.</strong><br /><br />
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">En savoir plus</a>
           </div>
@@ -128,7 +130,7 @@
             <p class="text-muted mb-0">SQL - NoSQL</p>
             <p class="text-muted mb-0">C#</p>
           </div>
-         
+
         </div>
         <div class="col-lg-4 col-md-6 text-center">
           <div class="mt-5">
@@ -211,8 +213,8 @@
         <div class="col-lg-8 text-center">
           <h2 class="mt-0">Entrons En Contact!</h2>
           <hr class="divider my-4">
-          <p class="text-muted mb-5">Prêt à collaborer et à démarrer un projet ensemble?
-            Appelez ou envoyez un email et je vous contacterai dans les plus brefs délais!</p>
+          <p class="text-muted mb-5">Prêt à collaborer et à démarrer un projet ensemble?</p>
+          <p>Envoyez-moi un e-mail ou Appelez directement, je vous contacterai dans les plus brefs délais!</p>
         </div>
       </div>
       <div class="row">
