--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
         <div class="col-lg-8 text-center">
           <h2 class="mt-0">Entrons En Contact!</h2>
           <hr class="divider my-4">
-          <p class="text-muted mb-5">Prêt à collaborer et à démarrer un projet ensemble?</p>
-          <p>Envoyez-moi un e-mail ou Appelez directement, je vous contacterai dans les plus brefs délais!</p>
+          <p class="text-muted mb-5">Prêt à collaborer et à démarrer un projet ensemble?<br/>
+          Envoyez-moi un e-mail ou Appelez directement, je vous contacterai dans les plus brefs délais!</p>
         </div>
       </div>
       <div class="row">
