--- a/index.html
+++ b/index.html
@@ -58,31 +58,29 @@
 
   <!-- Masthead -->
   <header class="masthead">
-    <div class="container h-100">
+    <div class="container-fluid h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
           <h1 class="text-uppercase text-white font-weight-bold">DEVELOPPEUR MERN Stack</h1>
           <hr class="divider my-4">
         </div>
-        <div class="col-md-7">
+        <div class="col-md-1"></div>
+          <div class="col-md-6">
           <div class="col-lg-8 align-self-baseline">
             <p class="text-white-75 font-weight-light mb-5">Je suis Tsioritsoa Tahiriniaina Armel RAZAFINDRABE.<br />
-              J’ai toujours été dans des situations qui ne me permettent pas de réaliser mes aspirations
-              professionnelles,
-              mais ceux-là ne m’ont jamais arrêté.
-              Aujourd'hui je suis là, je faisais partie d’une aventure riche en expériences avec SIMPLON et déterminé
-              plus que jamais à donner le meilleur de moi-même.
-              Je suis perspicace et j’aime travailler en équipe.
-              Bref, le monde de la programmation est ma vocation.
+              J’ai toujours été dans des situations qui ne me permettent pas de réaliser mes aspirations professionnelles, mais ceux-là ne m’ont jamais arrêté. <br/>
+              Aujourd'hui je suis là, je faisais partie d’une aventure riche en expériences avec SIMPLON et déterminé plus que jamais à donner le meilleur de moi-même.<br/>
+              Je suis perspicace et j’aime travailler en équipe.<br/>
+              Bref, le monde de la programmation est ma vocation.<br/>
               Quoi de plus beau que de faire ce que l'on aime.</p>
             <strong> Je suis prêt à relever tous les défis.</strong><br /><br />
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">En savoir plus</a>
           </div>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-4">
           <img id="sary" src="./img/tsiory.jpg" alt="Tsiory'tah Razafindrabe" />
         </div>
-        <!-- <div class="col-md-1"></div> -->
+        <div class="col-md-1"></div>
       </div>
     </div>
   </header>
