--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               Je suis perspicace et j’aime travailler en équipe.<br/>
               Bref, le monde de la programmation est ma vocation.<br/>
               Quoi de plus beau que de faire ce que l'on aime.</p>
-            <strong> Je suis prêt à relever tous les défis.</strong><br /><br />
+            <strong class="text-white-75 font-weight-light mb-5"> Je suis prêt à relever tous les défis.</strong><br /><br />
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">En savoir plus</a>
           </div>
         </div>
