--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
           </div>
         </div>
         <div class="col-md-4">
+          <p><i>« Personne n’est trop vieux pour se fixer un nouvel objectif ou réaliser de nouveaux rêves. »</i></p>
           <img id="sary" src="./img/tsiory.jpg" alt="Tsiory'tah Razafindrabe" />
         </div>
         <div class="col-md-1"></div>
