--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
   <!-- Theme CSS - Includes Bootstrap -->
   <link href="css/creative.min.css" rel="stylesheet">
+  <link href="css/creative.css" rel="stylesheet">
 
 </head>
 
@@ -233,6 +234,13 @@
   <!-- Footer -->
   <footer class="bg-light py-5">
     <div class="container">
+<div>
+<center>
+	<span id="to-top">
+		<i class="fa fa-chevron-up" aria-hidden="true"></i>
+	</span>
+</center>
+</div>
       <div class="small text-center text-muted">Copyright &copy; 2019 - Tsiory'tah Razafindrabe</div>
     </div>
   </footer>
@@ -247,6 +255,7 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/creative.min.js"></script>
+  <script src="js/creative.js"></script>
 </body>
 
 </html>
