--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Armel RAZAFINDRABE</title>
+  <title>Tsiory'tah RAZAFINDRABE</title>
   <link rel="shortcut icon" href="./img/avatar.png" />
   <!-- Font Awesome Icons -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -17,6 +17,8 @@
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic'
     rel='stylesheet' type='text/css'>
+
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Plugin CSS -->
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
@@ -66,15 +68,18 @@
           <hr class="divider my-4">
         </div>
         <div class="col-md-1"></div>
-          <div class="col-md-6">
+        <div class="col-md-6">
           <div class="col-lg-8 align-self-baseline">
             <p class="text-white-75 font-weight-light mb-5">Je suis Tsioritsoa Tahiriniaina Armel RAZAFINDRABE.<br />
-              J’ai toujours été dans des situations qui ne me permettent pas de réaliser mes aspirations professionnelles, mais ceux-là ne m’ont jamais arrêté. <br/>
-              Aujourd'hui je suis là, je faisais partie d’une aventure riche en expériences avec SIMPLON et déterminé plus que jamais à donner le meilleur de moi-même.<br/>
-              Je suis perspicace et j’aime travailler en équipe.<br/>
-              Bref, le monde de la programmation est ma vocation.<br/>
+              J’ai toujours été dans des situations qui ne me permettent pas de réaliser mes aspirations
+              professionnelles, mais ceux-là ne m’ont jamais arrêté. <br />
+              Aujourd'hui je suis là, je faisais partie d’une aventure riche en expériences avec SIMPLON et déterminé
+              plus que jamais à donner le meilleur de moi-même.<br />
+              Je suis perspicace et j’aime travailler en équipe.<br />
+              Bref, le monde de la programmation est ma vocation.<br />
               Quoi de plus beau que de faire ce que l'on aime.</p>
-            <strong class="text-white-75 font-weight-light mb-5"> Je suis prêt à relever tous les défis.</strong><br /><br />
+            <strong class="text-white-75 font-weight-light mb-5"> Je suis prêt à relever tous les
+              défis.</strong><br /><br />
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">En savoir plus</a>
           </div>
         </div>
@@ -133,15 +138,17 @@
 
         </div>
         <div class="col-lg-4 col-md-6 text-center">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-cogs text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Compétences<br />Technologies</h3>
-            <p class="text-muted mb-0">React.js - Angular.js</p>
-            <p class="text-muted mb-0">Node.js</p>
-            <p class="text-muted mb-0">MongoDB - PostgreSQL</p>
-            <p class="text-muted mb-0">Méthode Agile SCRUM</p>
-            <p class="text-muted mb-0">Github - Bootstrap</p>
-          </div>
+          <center>
+            <div class="mt-5">
+              <i class="fas fa-4x fa-cogs text-primary mb-4"></i>
+              <h3 class="h4 mb-2">Compétences<br />Technologies</h3>
+              <p class="text-muted mb-0">React.js - Angular.js</p>
+              <p class="text-muted mb-0">Node.js</p>
+              <p class="text-muted mb-0">MongoDB - PostgreSQL</p>
+              <p class="text-muted mb-0">Méthode Agile SCRUM</p>
+              <p class="text-muted mb-0">Github - Bootstrap</p>
+            </div>
+          </center>
         </div>
       </div>
     </div>
@@ -213,8 +220,8 @@
         <div class="col-lg-8 text-center">
           <h2 class="mt-0">Entrons En Contact!</h2>
           <hr class="divider my-4">
-          <p class="text-muted mb-5">Prêt à collaborer et à démarrer un projet ensemble?<br/>
-          Envoyez-moi un e-mail ou <br/> Appelez directement, je vous contacterai dans les plus brefs délais!</p>
+          <p class="text-muted mb-5">Prêt à collaborer et à démarrer un projet ensemble?<br />
+            Envoyez-moi un e-mail ou <br /> Appelez directement, je vous contacterai dans les plus brefs délais!</p>
         </div>
       </div>
       <div class="row">
@@ -234,14 +241,8 @@
   <!-- Footer -->
   <footer class="bg-light py-5">
     <div class="container">
-<div>
-<center>
-	<span id="to-top">
-		<i class="fa fa-chevron-up" aria-hidden="true"></i>
-	</span>
-</center>
-</div>
-      <div class="small text-center text-muted">Copyright &copy; 2019 - Tsiory'tah Razafindrabe</div>
+      <div class="small text-center text-muted">Copyright &copy; 2019 - <i class="fa fa-facebook" aria-hidden="true"
+          href="https://www.facebook.com/tsiorytah.razafindrabe">Tsiory'tah Razafindrabe</i></div>
     </div>
   </footer>
 
