--- a/index.html
+++ b/index.html
@@ -257,6 +257,9 @@
   <!-- Custom scripts for this template -->
   <script src="js/creative.min.js"></script>
   <script src="js/creative.js"></script>
+  
+  <!-- Badge LinkedIn -->
+  <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 </body>
 
 </html>
