--- a/index.html
+++ b/index.html
@@ -235,6 +235,9 @@
           <a class="d-block" href="mailto:tsiorytah@gmail.com">tsiorytah@gmail.com</a>
         </div>
       </div>
+      <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="fr_FR" data-type="vertical" data-theme="dark" data-vanity="tsiorytah-razafindrabe">
+        <a class="LI-simple-link" href='https://mg.linkedin.com/in/tsiorytah-razafindrabe?trk=profile-badge'>Tsioritsoa Armel RAZAFINDRABE</a>
+      </div>
     </div>
   </section>
 
