--- a/index.html
+++ b/index.html
@@ -217,7 +217,12 @@
   <section class="page-section" id="contact">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-lg-8 text-center">
+        <div class="col-lg-4 text-center">
+          <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="fr_FR" data-type="horizontal" data-theme="light" data-vanity="tsiorytah-razafindrabe">
+            <a class="LI-simple-link" href='https://mg.linkedin.com/in/tsiorytah-razafindrabe?trk=profile-badge'>Tsioritsoa Armel RAZAFINDRABE</a>
+          </div>
+        </div>
+        <div class="col-lg-4 text-center">
           <h2 class="mt-0">Entrons En Contact!</h2>
           <hr class="divider my-4">
           <p class="text-muted mb-5">Prêt à collaborer et à démarrer un projet ensemble?<br />
@@ -234,9 +239,6 @@
           <!-- Make sure to change the email address in anchor text AND the link below! -->
           <a class="d-block" href="mailto:tsiorytah@gmail.com">tsiorytah@gmail.com</a>
         </div>
-      </div>
-      <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="fr_FR" data-type="vertical" data-theme="dark" data-vanity="tsiorytah-razafindrabe">
-        <a class="LI-simple-link" href='https://mg.linkedin.com/in/tsiorytah-razafindrabe?trk=profile-badge'>Tsioritsoa Armel RAZAFINDRABE</a>
       </div>
     </div>
   </section>
