--- a/index.html
+++ b/index.html
@@ -217,12 +217,7 @@
   <section class="page-section" id="contact">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-lg-4 text-center">
-          <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="fr_FR" data-type="vertical" data-theme="light" data-vanity="tsiorytah-razafindrabe">
-            <a class="LI-simple-link" href='https://mg.linkedin.com/in/tsiorytah-razafindrabe?trk=profile-badge'>Tsioritsoa Armel RAZAFINDRABE</a>
-          </div>
-        </div>
-        <div class="col-lg-4 text-center">
+        <div class="col-lg-8 text-center">
           <h2 class="mt-0">Entrons En Contact!</h2>
           <hr class="divider my-4">
           <p class="text-muted mb-5">Prêt à collaborer et à démarrer un projet ensemble?<br />
@@ -230,7 +225,12 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
+        <div class="col-lg-4 ml-auto text-center">
+          <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="fr_FR" data-type="vertical" data-theme="light" data-vanity="tsiorytah-razafindrabe">
+            <a class="LI-simple-link" href='https://mg.linkedin.com/in/tsiorytah-razafindrabe?trk=profile-badge'>Tsioritsoa Armel RAZAFINDRABE</a>
+          </div>
+        </div>
+        <div class="col-lg-4 text-center mb-5 mb-lg-0">
           <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
           <div>+261 341-960-200</div>
         </div>
