--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-4 text-center">
+        <div class="col-lg-4 ml-auto text-center">
           <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="fr_FR" data-type="vertical" data-theme="light" data-vanity="tsiorytah-razafindrabe">
             <a class="LI-simple-link" href='https://mg.linkedin.com/in/tsiorytah-razafindrabe?trk=profile-badge'>Tsioritsoa Armel RAZAFINDRABE</a>
           </div>
