--- a/index.html
+++ b/index.html
@@ -225,10 +225,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-8 ml-auto text-center">
-          <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="fr_FR" data-type="horizontal" data-theme="light" data-vanity="tsiorytah-razafindrabe">
+        <div class="col-lg-8 ml-auto text-center LI-profile-badge"  data-version="v1" data-size="medium" data-locale="fr_FR" data-type="horizontal" data-theme="light" data-vanity="tsiorytah-razafindrabe">
             <a class="LI-simple-link" href='https://mg.linkedin.com/in/tsiorytah-razafindrabe?trk=profile-badge'>Tsioritsoa Armel RAZAFINDRABE</a>
-          </div>
         </div>
         <div class="col-lg-4 mr-auto text-center">
           <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
