--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-8 LI-profile-badge"  data-version="v1" data-size="large" data-locale="fr_FR" data-type="horizontal" data-theme="light" data-vanity="tsiorytah-razafindrabe">
+        <div class="col-lg-4 ml-auto LI-profile-badge"  data-version="v1" data-size="large" data-locale="fr_FR" data-type="horizontal" data-theme="light" data-vanity="tsiorytah-razafindrabe">
             <a class="LI-simple-link" href='https://mg.linkedin.com/in/tsiorytah-razafindrabe?trk=profile-badge'>Tsioritsoa Armel RAZAFINDRABE</a>
         </div>
         <div class="col-lg-4 mr-auto text-center">
