--- a/index.html
+++ b/index.html
@@ -225,6 +225,8 @@
         </div>
       </div>
       <div class="row">
+        <div class="col-lg-2">
+        </div>
         <div class="col-lg-4 ml-auto LI-profile-badge"  data-version="v1" data-size="large" data-locale="fr_FR" data-type="horizontal" data-theme="light" data-vanity="tsiorytah-razafindrabe">
             <a class="LI-simple-link" href='https://mg.linkedin.com/in/tsiorytah-razafindrabe?trk=profile-badge'>Tsioritsoa Armel RAZAFINDRABE</a>
         </div>
@@ -234,6 +236,8 @@
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
           <!-- Make sure to change the email address in anchor text AND the link below! -->
           <a class="d-block" href="mailto:tsiorytah@gmail.com">tsiorytah@gmail.com</a>
+        </div>
+        <div class="col-lg-2">
         </div>
       </div>
     </div>
