--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
 
   <!-- Masthead -->
   <header class="masthead">
-    <div class="container-fluid h-100">
-      <div class="row h-100 align-items-center justify-content-center text-center">
+    <div class="container-fluid">
+      <div class="row align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
           <h1 class="text-uppercase text-white font-weight-bold">DEVELOPPEUR MERN Stack</h1>
           <hr class="divider my-4">
         </div>
         <div class="col-md-1"></div>
         <div class="col-md-6">
-          <div class="col-lg-8 align-self-baseline">
+          <div class="align-self-baseline">
             <strong class="text-white-75 font-weight-light mb-5">Je suis Tsioritsoa Tahiriniaina Armel RAZAFINDRABE.<br />
               J’ai toujours été dans des situations qui ne me permettent pas de réaliser mes aspirations
               professionnelles, mais ceux-là ne m’ont jamais arrêté. <br />
