--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
         <div class="col-md-1"></div>
         <div class="col-md-6">
           <div class="align-self-baseline">
-            <strong class="text-white-75 font-weight-light mb-5">Je suis Tsioritsoa Tahiriniaina Armel RAZAFINDRABE.<br />
+            <p class="text-white-75 font-weight-light mb-5">Je suis Tsioritsoa Tahiriniaina Armel RAZAFINDRABE.<br />
               J’ai toujours été dans des situations qui ne me permettent pas de réaliser mes aspirations
               professionnelles, mais ceux-là ne m’ont jamais arrêté. <br />
               Aujourd'hui je suis là, je faisais partie d’une aventure riche en expériences avec SIMPLON et déterminé
               plus que jamais à donner le meilleur de moi-même.<br />
               Je suis perspicace et j’aime travailler en équipe.<br />
               Bref, le monde de la programmation est ma vocation.<br />
-              Quoi de plus beau que de faire ce que l'on aime.</strong>
+              Quoi de plus beau que de faire ce que l'on aime.</p>
             <strong class="text-white-75 font-weight-light mb-5"> Je suis prêt à relever tous les
               défis.</strong><br /><br />
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">En savoir plus</a>
