--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               Aujourd'hui je suis là, je faisais partie d’une aventure riche en expériences avec SIMPLON et déterminé
               plus que jamais à donner le meilleur de moi-même.<br />
               Je suis perspicace et j’aime travailler en équipe.<br />
-              Bref, le monde de la programmation est ma vocation.<br />
+              Bref, le monde de l'informatique et la technologie c'est ma vocation.<br />
               Quoi de plus beau que de faire ce que l'on aime.</p><br />
             <strong class="text-white-75 font-weight-light mb-5"> Je suis prêt à relever tous les
               défis.</strong><br /><br />
