--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
           <h2 class="mt-0">Entrons En Contact!</h2>
           <hr class="divider my-4">
           <p class="text-muted mb-5">Prêt à collaborer et à démarrer un projet ensemble?<br />
-            Envoyez-moi un e-mail ou <br /> Appelez directement, je vous contacterai dans les plus brefs délais!</p>
+            Envoyez-moi un e-mail ou <br /> Appelez directement, je serrai à votre disposition dans les plus brefs délais!</p>
         </div>
       </div>
       <div class="row">
