edit github url

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
   <section class="page-section bg-dark text-white">
     <div class="container text-center">
       <h2 class="mb-4">Pour voir plus de projets, clickez sur 'Voir Plus'</h2>
-      <a class="btn btn-light btn-xl" href="https://github.com/RTTArmel/repositories">Voir Plus</a>
+      <a class="btn btn-light btn-xl" href="https://github.com/RTTArmel">Voir Plus</a>
     </div>
   </section>
 
