--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <p class="text-white-75 font-weight-light mb-5">
               J’ai toujours été dans des situations qui ne me permettent pas de réaliser mes aspirations professionnelles, 
               mais ceux-là ne m’ont jamais arrêté.</br>
-              Aujourd'hui je suis là, je veux toujours faire partie d’une aventure riche en expériences et déterminé plus
+              Aujourd'hui je suis là, je veux toujours faire partie d’une aventure riche en expériences et je suis déterminé plus
               que jamais à donner le meilleur de moi-même.</br>
               Je suis perspicace et j’aime travailler en équipe.</p><br />
             <strong class="text-white-75 font-weight-light mb-5"> Je suis prêt à relever tous les
@@ -97,8 +97,8 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0">J'ai ce qu'il vous faut!</h2>
           <hr class="divider light my-4">
-          <h4 class="text-white-50 mb-4">En tant que Développeur Full-Stack, je suis disposé à réaliser tout proposition
-            d'application web.
+          <h4 class="text-white-50 mb-4">Avant de devenir Chef de Projet WebSIG, j'étais Développeur Full-Stack puis Lead Développeur.
+            Maintenant je suis disposé à réaliser tout proposition d'application web. <br />
             Apte à travailler en équipe et à relever tous les challenges, je suis un WARRIOR dans le domaine de
             développement informatique.
           </h4>
@@ -141,12 +141,12 @@
           <center>
             <div class="mt-5">
               <i class="fas fa-4x fa-cogs text-primary mb-4"></i>
-              <h3 class="h4 mb-2">Compétences<br />Technologies</h3>
+              <h3 class="h4 mb-2">Compétences et Technologies</h3>
               <p class="text-muted mb-0">React.js - Angular.js</p>
               <p class="text-muted mb-0">PgAdmin - Django</p>
               <p class="text-muted mb-0">Node.js - NestJs</p>
               <p class="text-muted mb-0">MongoDB - PostgreSQL</p>
-              <p class="text-muted mb-0">Méthode Agile SCRUM</p>
+              <p class="text-muted mb-0"><b>Méthode Agile SCRUM</b></p>
               <p class="text-muted mb-0">GitHub - GitLab - Bootstrap</p>
             </div>
           </center>
@@ -162,42 +162,40 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/zonova.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/zonova.jpg" alt="Zonova Library">
+          <a class="portfolio-box" href="img/portfolio/fullsize/developpeur.png">
+            <img class="img-fluid" src="img/portfolio/thumbnails/developpeur.png" alt="developpeur">
             <div class="portfolio-box-caption">
               <div class="project-name">
-                Zonova Library
+                Développeur 
               </div>
               <div class="project text-white-50">
-                C'est un Projet qui est utilisé pour la gestion des millions de livres afin que l'utilisateur
-                puisse trouver facilement le livre de son choix.
+                ERP - Un des plus grands projets réalisés en tant que Développeur Full-Stack dans une entreprise.
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/Cuisine.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/Cuisine.jpg" alt="ExtraCOOK Simplon">
+          <a class="portfolio-box" href="img/portfolio/fullsize/lead.png">
+            <img class="img-fluid" src="img/portfolio/thumbnails/lead.png" alt="lead">
             <div class="portfolio-box-caption">
               <div class="project-name">
-                ExtraCOOK
+                Lead développeur
               </div>
               <div class="project text-white-50">
-                C'est une application permettant de gerer des ateliers de cuisine. La réservation à l'atelier,
-                l'inscription, les modifications et affichage ou non des ateliers.
+                Exemple de projets réalisés dans le monde professionnel quand j'étais Lead développeur.
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/e-commerce.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/e-commerce.jpg" alt="E-commerce">
+          <a class="portfolio-box" href="img/portfolio/fullsize/cp.png">
+            <img class="img-fluid" src="img/portfolio/thumbnails/cp.png" alt="Projets cp">
             <div class="portfolio-box-caption">
               <div class="project-name">
-                e-commerce
+                Chef de projet - Projets professionnels
               </div>
               <div class="project text-white-50">
-                C'est un site e-commerce réalisé pour le plaisir et pour s'exercer dans le domaine de développement
+                Des projets pilotés en tant que Chef de projet dans une entreprise digitale.
               </div>
             </div>
           </a>
@@ -207,12 +205,12 @@
   </section>
 
   <!-- Call to Action Section -->
-  <section class="page-section bg-dark text-white">
+  <!-- <section class="page-section bg-dark text-white">
     <div class="container text-center">
       <h2 class="mb-4">Pour voir plus de projets, clickez sur 'Voir Plus'</h2>
       <a class="btn btn-light btn-xl" href="https://github.com/RTTArmel">Voir Plus</a>
     </div>
-  </section>
+  </section> -->
 
   <!-- Contact Section -->
   <section class="page-section" id="contact">
@@ -250,7 +248,7 @@
   <!-- Footer -->
   <footer class="bg-light py-5">
     <div class="container">
-      <div class="small text-center text-muted">Copyright &copy; 2020 - <i class="fa fa-facebook" aria-hidden="true"
+      <div class="small text-center text-muted">Copyright &copy; 2024 - <i class="fa fa-facebook" aria-hidden="true"
           href="https://www.facebook.com/tsiorytah.razafindrabe">Tsiory'tah Razafindrabe</i></div>
     </div>
   </footer>
