--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0">J'ai ce qu'il vous faut!</h2>
           <hr class="divider light my-4">
-          <h4 class="text-white-50 mb-4">Avant de devenir Chef de Projet WebSIG, j'étais Développeur Full-Stack puis Lead Développeur.
-            Maintenant je suis disposé à réaliser tout proposition d'application web. <br />
+          <h4 class="text-white-50 mb-4">Actuellement Chef de Projet Digital, je suis disposé à réaliser toute proposition d'application web. <br />
             Apte à travailler en équipe et à relever tous les challenges, je suis un WARRIOR dans le domaine de
             développement informatique.
           </h4>
@@ -192,7 +191,7 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/cp.png" alt="Projets cp">
             <div class="portfolio-box-caption">
               <div class="project-name">
-                Chef de projet - Projets professionnels
+                Chef de projet
               </div>
               <div class="project text-white-50">
                 Des projets pilotés en tant que Chef de projet dans une entreprise digitale.
