--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0">J'ai ce qu'il vous faut!</h2>
           <hr class="divider light my-4">
-          <h4 class="text-white-50 mb-4">Actuellement Chef de Projet Digital, je suis disposé à réaliser toute proposition d'application web. <br />
-            Apte à travailler en équipe et à relever tous les challenges, je suis un WARRIOR dans le domaine de
-            développement informatique.
+          <h4 class="text-white-50 mb-4">Mon nom est <a class="text-white">RAZAFINDRABE Tsioritsoa Tahiriniaina Armel</a> .<br />
+            Actuellement Chef de Projet Digital, je suis disposé à réaliser toute proposition d'application Web et aussi le WebSIG. <br />
+            Apte à travailler en équipe et à relever tous les challenges, je suis un WARRIOR dans le domaine de développement informatique.
           </h4>
           <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Détails</a>
         </div>
