--- a/index.html
+++ b/index.html
@@ -98,8 +98,13 @@
           <h2 class="text-white mt-0">J'ai ce qu'il vous faut!</h2>
           <hr class="divider light my-4">
           <h4 class="text-white-50 mb-4">Mon nom est <a class="text-white">RAZAFINDRABE Tsioritsoa Tahiriniaina Armel</a> .<br />
-            Actuellement Chef de Projet Digital, je suis disposé à réaliser toute proposition d'application Web et aussi le WebSIG. <br />
-            Apte à travailler en équipe et à relever tous les challenges, je suis un WARRIOR dans le domaine de développement informatique.
+            En 2020, j'ai débuté ma carrière dans le développement web. Deux ans plus tard, j'ai été promu Lead Développeur, 
+            ce qui m'a permis d'approfondir mes compétences techniques et de leadership.<br />
+            Depuis juillet 2024, j'occupe le poste de Chef de Projet Digital. 
+            Fort de mon expérience, je suis prêt à relever tous les défis en matière de développement d'applications web, 
+            y compris des solutions WebSIG.<br />
+            Passionné et motivé, je suis parfaitement à l'aise pour travailler en équipe et surmonté chaque challenge. 
+            Je me considère comme un WARRIOR dans le domaine du développement informatique !
           </h4>
           <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Détails</a>
         </div>
